| Bug #28908 | Replication: set global server_id is not setting the session server_id .... | ||
|---|---|---|---|
| Submitted: | 6 Jun 2007 0:31 | Modified: | 6 Feb 2008 18:43 |
| Reporter: | Jonathan Miller | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S2 (Serious) |
| Version: | 5.1-telco | OS: | Linux (32 bit) |
| Assigned to: | Zhenxing He | Target Version: | 5.1+ |
| Triage: | D2 (Serious) | ||
[6 Jun 2007 0:31]
Jonathan Miller
[6 Jun 2007 0:35]
Matthew Montgomery
Doing SET GLOBAL server_id=N does not change the SESSION server_id value. For all subsequent changes during that session the old server_id value is used. There is no way to set the SESSION server_id dynamically.
[20 Dec 2007 7:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/40249 ChangeSet@1.2657, 2007-12-20 13:23:38+08:00, hezx@hezx.(none) +3 -0 BUG#28908 Replication: set global server_id is not setting the session server_id When set the server-id dynamically, the server_id member of current thread is not updated. Update the server_id member of current thread after updated the global variable value.
[21 Dec 2007 4:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/40318 ChangeSet@1.2560, 2007-12-21 11:02:48+08:00, hezx@mail.hezx.com +3 -0 BUG#28908 Replication: set global server_id is not setting the session server_id When set the server-id dynamically, the server_id member of current thread is not updated. Update the server_id member of current thread after updated the global variable value.
[5 Feb 2008 13:45]
Bugs System
Pushed into 5.0.56
[5 Feb 2008 14:03]
Bugs System
Pushed into 5.1.24-rc
[5 Feb 2008 14:07]
Bugs System
Pushed into 6.0.5-alpha
[6 Feb 2008 18:43]
Jon Stephens
Documented bugfix in the 5.0.56, 5.1.24, and 6.0.5 changelogs as follows:
Setting server_id did not update its value
for the current session.
(NOTE: I checked the docs and they show server_id as being global, not session.)
[6 Mar 2008 6:58]
Jon Stephens
Fix also documented for 5.1.23-ndb-6.2.14.
[30 Mar 2008 11:28]
Jon Stephens
Fix also documented for 5.1.23-ndb-6.3.11.
